--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "network",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "homepage": "https://drew24n.github.io/react/",
   "dependencies": {
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
