--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "network",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "private": true,
   "homepage": "https://drew24n.github.io/react/",
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
