--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "network",
-  "version": "1.0.5",
+  "name": "covid-19",
+  "version": "1.5.0",
   "private": true,
-  "homepage": "https://drew24n.github.io/react/",
   "dependencies": {
-    "axios": "^0.19.2",
-    "chart.js": "^2.9.3",
-    "react": "^16.13.1",
-    "react-chartjs-2": "^2.9.0",
+    "axios": "^0.20.0",
+    "chart.js": "^2.9.4",
+    "normalize.css": "^8.0.1",
+    "react": "^17.0.1",
+    "react-chartjs-2": "^2.10.0",
     "react-countup": "^4.3.3",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "react-dom": "^17.0.1",
+    "react-scripts": "3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "gh-pages -d build"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,8 +32,16 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0",
+    "@types/axios": "^0.14.0",
+    "@types/chart.js": "^2.9.27",
+    "@types/node": "^14.14.2",
+    "@types/react": "^16.9.53",
+    "@types/react-chartjs-2": "^2.5.7",
+    "@types/react-countup": "^4.3.0",
+    "@types/react-dom": "^16.9.8",
     "node-sass": "^4.14.1",
-    "redux-devtools-extension": "^2.13.8"
+    "react-scripts-scss-ts": "^2.17.1",
+    "redux-devtools-extension": "^2.13.8",
+    "typescript": "^4.0.3"
   }
 }
